--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="Cache-Control" content="no-cache" />
         <meta http-equiv="Pragma" content="no-cache" />
-        <title>퍼블리셔 이용현 포트 폴리오</title>
+        <title>퍼블리셔 이용현 포트 폴리오(반응형 - github)</title>
         <link rel="stylesheet" type="text/css" href="common/css/common.css" />
         <link rel="stylesheet" type="text/css" href="common/css/swiper-bundle.min.css" />
         <link rel="stylesheet" type="text/css" href="common/css/main.css" />
