--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="swiper-wrapper">
 
                         <div class="swiper-slide main-page">
-                            <h3 class="skip">이용현 포트폴리오</h3>
+                            <h3 class="skip">이용현 포트폴리오(반응형 - github)</h3>
                             <div class="main-box active">
                                 <p class="welcome"><span>이용현의 포트폴리오</span> 사이트에 오신것을 환영 합니다.</p>
                                 <p class="semantic">시멘틱 마크업을 지향 하며 군더더기 없는 코드를 작성하기 위해 노력 하겠습니다.</p>
