포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <header>
                 <h1>
                     이용현<br />
-                    포트폴리오(반응형 - github)
+                    포트폴리오
                 </h1>
                 <nav>
                     <!-- <a href="#" class="m-btn">모바일버전 메뉴</a> -->
