--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                                         <ul class="skill-list">
                                             <li>- html5 (중급)</li>
                                             <li>- css3 (중급)</li>
+                                            <li>- WebSquare(웹스퀘어)</li>
                                             <li>- jQuery (초급)</li>
                                             <li>- Photoshop (초급)</li>
                                         </ul>
@@ -102,6 +103,15 @@
                                         <a href="https://www.liveinkorea.kr/portal/KOR/main/main.do" target="_blank" title="다누리 사이트 새창열림" class="img-link"><img src="common/images/danuri.jpg" alt="다누리사이트 이미지" /></a>
                                         <p class="txt">다문화 가족지원 포털사이트 다누리 입니다. 2019년 6월부터 2019년 12월31일까지 계약직으로 있으면서 메인페이지 레이아웃 바뀐 부분 작업과 2020년 바뀐 정책들을 사이트에 13개국언어로 현행화 하는 작업을 하였습니다. 오랫만에 해본 코딩이라 매우 설렜으며 재미있게 작업했습니다.</p>
                                         <p class="txt2">이미지를 클릭(터치)하면 새창으로 열립니다.</p>
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <p class="txt">
+                                            <ol>
+                                                <li>1. 신한은행(대림중앙점 - 구로디지털단지) 신 단위단말 html5 전환 프로젝트 (WebSquare) 3개월 (2021.3.15 ~ 6.14)</li>
+                                                <li>2. 신한투자신탁(여의도) 신uiux 전환 프로젝트 (WebSquare) 4개월 (2021.6.15 ~ 10.08)</li>
+                                                <li>3. NH투자증권 금융소비자 보호 포털 구축 (WebSquare) 2개월(2021.10.12 ~ 12.03)</li>
+                                            </ol>
+                                        </p>
                                     </li>
                                 </ul>
                                 <div class="work-pagination"></div>
