--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                                         <p class="txt2">이미지를 클릭(터치)하면 새창으로 열립니다.</p>
                                     </li>
                                     <li class="swiper-slide">
-                                        <ol>
+                                        <ol class="WebSquare">
+                                            <li>*  내부 시스템 작업으로 보안때문에 이미지와 소스는 없습니다.</li>
                                             <li>1. 신한은행(대림중앙점 - 구로디지털단지) 신 단위단말 html5 전환 프로젝트 (WebSquare) 3개월 (2021.3.15 ~ 6.14)</li>
                                             <li>2. 신한투자신탁(여의도) 신uiux 전환 프로젝트 (WebSquare) 4개월 (2021.6.15 ~ 10.08)</li>
                                             <li>3. NH투자증권 금융소비자 보호 포털 구축 (WebSquare) 2개월(2021.10.12 ~ 12.03)</li>
