--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                         <p class="txt">다문화 가족지원 포털사이트 다누리 입니다. 2019년 6월부터 2019년 12월31일까지 계약직으로 있으면서 메인페이지 레이아웃 바뀐 부분 작업과 2020년 바뀐 정책들을 사이트에 13개국언어로 현행화 하는 작업을 하였습니다. 오랫만에 해본 코딩이라 매우 설렜으며 재미있게 작업했습니다.</p>
                                         <p class="txt2">이미지를 클릭(터치)하면 새창으로 열립니다.</p>
                                     </li>
-                                    <li class="swiper-slide">
+                                    <li class="swiper-slide" style="display:none;">
                                         <ol class="WebSquare">
                                             <li>*  내부 시스템 작업으로 보안때문에 이미지와 소스는 없습니다.</li>
                                             <li>1. 신한은행(대림중앙점 - 구로디지털단지) 신 단위단말 html5 전환 프로젝트 (WebSquare) 3개월 (2021.3.15 ~ 6.14)</li>
